font size fix in wrapped2022

--- a/src/components/Pages/wrapped2022.css
+++ b/src/components/Pages/wrapped2022.css
@@ -18,7 +18,7 @@
 
 .wraping-2022{
     text-align: center;
-    font-size: 1.3rem;
+    font-size: 1rem;
     padding: 1.3% 0;
     background-color: var(--color-1-080);
 }
@@ -33,7 +33,7 @@
 }
 
 .wrapping-content-short h3{
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     font-family: 'Caladea', serif;
     line-height: 1.6;
 }
@@ -83,6 +83,7 @@
 
 .month-details{
     padding-top: 1rem;
+    font-size: 1.4rem !important;
 }
 
 .w100{
@@ -136,12 +137,12 @@
     }
 
     .wraping-2022{
-        font-size: 1rem;
+        font-size: .7rem;
     }
 
     .wrapping-content-short h3{
         text-align: center;
-        font-size: 1.4rem;
+        font-size: 1.1rem;
     }
 
     .xs-jan{
@@ -195,9 +196,23 @@
     .tx-centr{
         font-size: 1.8rem;
     }
+
+    .month-wrapped{
+        font-size: 1.5rem !important;
+    }
+
+    .month-details{
+        font-size: 1.1rem !important;
+    }
 }
 
 body{
     max-width: 100% !important;
     overflow-x: hidden !important;
+}
+
+@media only screen and (max-width:320px){
+    .wraping-2022{
+        font-size: .5rem;
+    }
 }
